args-and-env.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Demo-Pod
  labels:
    app: nginx
    tier: something
spec:
  containers:
    - name: First-Container
      image: nginx
      commands:
        - "command1"
        - "command2"
      args: ["arg1", "arg2"]
