multicontainer-pod.yaml
#  Co-located containers
apiVersion: v1
kind: Pod
metadata:
  name: Demo-Pod
  labels:
    app: nginx
    tier: something
spec:
  containers:
    - name: First-Container
      image: nginx
    - name: Second-Container
      image: python:3.12-alpine


#  Regular init container
# apiVersion: v1
# kind: Pod
# metadata:
#   name: simple-webapp
#   labels:
#     name: simple-webapp
# spec:
#   containers:
#     - name: web-app
#       image: web-app
#       ports:
#         - containerPort: 8080
#   initContainers:
#   - name: db-checker
#     image: busybox
#     command: 'wait-for-db-to-start.sh'
#   - name: api-checker
#     image: busybox
#     command: 'wait-for-api-to-start.sh'


# Sidecar container
# apiVersion: v1
# kind: Pod
# metadata:
#   name: simple-webapp
#   labels:
#     name: simple-webapp
# spec:
#   containers:
#     - name: web-app
#       image: web-app
#       ports:
#         - containerPort: 8080
#   initContainers:
#   - name: db-checker
#     image: busybox
#     command: 'wait-for-db-to-start.sh'
#     restartPolicy: Always
