pod-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: Demo-Pod
  labels:
    app: nginx
    tier: something
spec:
  containers:
    - name: First-Container
      image: nginx
    - name: Second-Container
      image: python:3.12-alpine
