security-contexts.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-pod
spec:
  # On a pod level! Is run as root if unspecified
  securityContext:
    runAsUser: 1000
    #  Can only be applied at container level (for some reason unsupported?)
    capabilities:
      add: ["MAC_ADMIN"]
  containers:
    - name: ubuntu
      image: ubuntu
      command: ["sleep", "3600"]
      # On a container level!
      securityContext:
        runAsUser: 2500
