cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-end
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  # Selector, is same as in node port, used to define to which pods to match
  selector:
    app: myapp
    type: back-end
