node-port-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service

spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30008
  # Selector is used to identify which pod this will be mapped to, if multiple pods fit, it will be mapped to all of them, working as a load balancer
  selector:
    app: myapp
    type: front-end
