network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-policy
spec:
  podSelector:
    matchLabels:
      role: db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          name: api-pod
      #  Both selectors conditions must be met for this rule to count as conditions are met
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prod
    # These are two seperate rules, source must meet at least 1 of these rules
    - ipBlock:
        cidr: 192.168.5.10/32
    ports:
    - protocol: TCP
      port: 3306
  egress:
  - to:
    - ipBlock:
        cidr: 192.168.5.10/32
      ports:
      - protocol: TCP
        port: 80
